# airwire

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: audio.rs  cli.rs  client.rs  crypto.rs  main.rs  protocol.rs  relay.rs  tor.rs  tui.rs  tunnel.rs  update.rs
