[package]
name = "airwire"
version = "0.2.0"
edition = "2024"
authors = ["H34TB145T"]
description = "Anonymous, end-to-end encrypted terminal chat"
license = "MIT"
repository = "https://github.com/H34TB145T/airwire"

[features]
default = ["voice"]
voice = ["dep:cpal"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
bincode = "1.3"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
cpal = { version = "0.15", optional = true }
crossterm = { version = "0.28", features = ["event-stream"] }
directories = "6.0"
futures-util = "0.3"
hex = "0.4"
mime_guess = "2.0"
rand = "0.8"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
spake2 = "0.4"
tokio = { version = "1.44", features = ["full"] }
tokio-socks = "0.5"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tempfile = "3.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
zeroize = { version = "1.8", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
